--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{layout}">
-    <head>
-        <title th:text="#{app.title}" />
-    </head>
-    <body>
-        <div layout:fragment="content">
-            <h1 th:text="#{home.index.headline}" class="grow text-3xl md:text-4xl font-medium mb-8" />
-            <div class="md:w-2/5 mb-12">
-                <h4 th:text="#{home.index.exploreEntities}" class="text-2xl font-medium mb-4" />
-                <div class="flex flex-col border border-gray-300 rounded">
-                    <a th:href="@{/clasess}" th:text="#{clases.list.headline}" class="w-full border-gray-300 hover:bg-gray-100 rounded-t rounded-b px-4 py-2" />
-                </div>
-            </div>
+    layout:decorate="~{layout}">
+
+<head>
+    <title th:text="#{app.title}" />
+</head>
+
+<body>
+    <div layout:fragment="content">
+        <h1 th:text="#{home.index.headline}" class="text-2xl md:text-2xl font-medium mb-8" />
+        <div class="md:w-2/5 mb-12">
+            <h4 th:text="#{home.index.exploreEntities}" class="text-2xl font-medium mb-4" />
+            <a th:href="@{/clasess}" th:text="#{clases.list.headline}"
+                class="border border-red-100 hover:bg-red-100 rounded-t rounded-b mb-4 px-2" />
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
