--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-    <title th:text="#{app.title}"/>
+    <title th:text="#{app.title}" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -12,29 +12,13 @@
 </head>
 
 <body>
-    <header class="bg-red-100">
+    <header class="bg-white">
         <div class="container px-4 md:px-6">
             <nav class="flex flex-wrap items-center justify-between py-2">
                 <a th:href="@{/}" class="flex py-1.5 mr-4">
                     <img th:src="@{/images/d20.png}" th:alt="#{app.title}" width="30" height="30" class="inline-block">
                     <span th:text="#{app.title}" class="text-xl font-bold pl-3" />
                 </a>
-                <button type="button" class="js-dropdown md:hidden border rounded" data-dropdown-single="true"
-                    th:aria-label="#{navigation.toggle}" aria-controls="navbarToggle" aria-expanded="false">
-                    <div class="space-y-1.5 my-2.5 mx-4">
-                        <div class="w-6 h-0.5 bg-slate-950"></div>
-                        <div class="w-6 h-0.5 bg-slate-950"></div>
-                        <div class="w-6 h-0.5 bg-slate-950"></div>
-                    </div>
-                </button>
-                <div class="hidden md:block flex grow md:grow-0 justify-end basis-full md:basis-auto pt-3 md:pt-1 pb-1"
-                    id="navbarToggle">
-                    <ul class="flex">
-                        <li>
-                            <a th:href="@{/}" th:text="#{navigation.home}" class="text-slate-90 p-2" />
-                        </li>
-                    </ul>
-                </div>
             </nav>
         </div>
     </header>
