--- a/src/main/resources/templates/clases/list.html
+++ b/src/main/resources/templates/clases/list.html
@@ -7,7 +7,7 @@
     <body>
         <div layout:fragment="content">
             <div class="flex flex-wrap mb-6">
-                <h1 th:text="#{clases.list.headline}" class="grow text-3xl md:text-4xl font-medium mb-2" />
+                <h1 th:text="#{clases.list.headline.clases}" class="grow text-3xl md:text-4xl font-medium mb-2" />
                 <div>
                     <a th:href="@{/clasess/add}" th:text="#{clases.list.createNew}" class="inline-block text-white bg-blue-600 hover:bg-blue-700 focus:ring-blue-300  focus:ring-4 rounded px-5 py-2" />
                 </div>
